# tcp-lab

./: .gitignore  Cargo.toml  Justfile  README.md  build-with-python.fish  encda.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/tcp-lab-abstract/: Cargo.toml
crates/tcp-lab-abstract/src/: config.rs  lib.rs  packet.rs  scenario.rs
crates/tcp-lab-cli/: Cargo.toml
crates/tcp-lab-cli/src/: examples.rs  java_loader.rs  lib.rs  main.rs  runner.rs  tui.rs
crates/tcp-lab-cli/src/cpp/: loader.rs  mod.rs
crates/tcp-lab-cli/src/python/: adapter.rs  context.rs  loader.rs  mod.rs
crates/tcp-lab-core/: Cargo.toml
crates/tcp-lab-core/src/: grader.rs  interface.rs  lib.rs  packet.rs  simulator.rs
crates/tcp-lab-eval-host/: Cargo.toml
crates/tcp-lab-eval-host/src/: main.rs
crates/tcp-lab-ffi/: Cargo.toml
crates/tcp-lab-ffi/src/: lib.rs
crates/tcp-lab-jni/: Cargo.toml
crates/tcp-lab-jni/src/: lib.rs
crates/tcp-lab-loader/: Cargo.toml
crates/tcp-lab-loader/src/: builtin.rs  java.rs  lib.rs  spec.rs
crates/tcp-lab-loader/src/cpp/: loader.rs
crates/tcp-lab-loader/src/python/: adapter.rs  context.rs  environment.rs  loader.rs  mod.rs
crates/tcp-lab-sim-cli/: Cargo.toml
crates/tcp-lab-sim-cli/src/: main.rs
crates/tcp-lab-simulator/: Cargo.toml
crates/tcp-lab-simulator/src/: encda.rs  engine.rs  lib.rs  scenario_runner.rs  trace.rs  tui.rs
docs/: ARCHITECTURE.md
sdk/cpp/: .gitignore  CMakeLists.txt  README.md  xmake.lua
sdk/cpp/examples/: Rdt3Receiver.cpp  Rdt3Sender.cpp  TestSender.cpp
sdk/cpp/include/tcp_lab/: checksum.hpp  sdk.hpp
sdk/cpp/src/: rdt1_receiver.cpp  rdt1_sender.cpp
sdk/java/: .gitignore  README.md  pom.xml
sdk/java/src/com/ouc/tcp/legacy/: Rdt20Receiver.java  Rdt20Sender.java  Rdt21Receiver.java  Rdt21Sender.java  Rdt22Receiver.java  Rdt22Sender.java  Rdt2SenderBase.java  Rdt2Utils.java
sdk/java/src/com/ouc/tcp/sdk/: NativeBridge.java  Packet.java  SystemContext.java  SystemContextImpl.java  TcpHeader.java  TransportProtocol.java
sdk/java/src/com/ouc/tcp/test/: TestSender.java
sdk/java/src/main/java/com/ouc/tcp/sdk/: NativeBridge.java  Packet.java  SystemContext.java  SystemContextImpl.java  TcpHeader.java  TransportProtocol.java
sdk/java/src/main/java/com/ouc/tcp/sdk/rdt1/: Rdt1Receiver.java  Rdt1Sender.java
sdk/java/src/main/java/com/ouc/tcp/sdk/util/: Checksum.java
sdk/python/: README.md  pyproject.toml  setup.cfg
sdk/python/examples/: rdt3_receiver.py  rdt3_sender.py
sdk/python/tcp_lab/: __init__.py  protocol.py  structs.py
sdk/python/tcp_lab_sdk/: __init__.py  checksum.py  protocol.py  rdt1.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: mod.rs  rdt1_runner.rs  rdt3_runner.rs
sdk/rust/src/: checksum.rs  lib.rs  rdt1.rs  rdt3_receiver.rs  rdt3_sender.rs
sdk/rust/src/examples/: mod.rs  rdt3_receiver.rs  rdt3_sender.rs
tests/: test_echo.toml  test_gbn.toml  test_rdt20.toml  test_rdt21.toml  test_rdt22.toml  test_rdt3.toml  test_rdt3_ack.toml  test_reno.toml  test_sr.toml  test_tahoe.toml
