[workspace]
members = [
    "crates/tcp-lab-core",
    "crates/tcp-lab-cli",
    "crates/tcp-lab-jni",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.52", features = ["derive"] }
bytes = "1.11.0"
