[package]
name = "tcp-lab-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tcp-lab-core = { path = "../tcp-lab-core" }
tcp-lab-jni = { path = "../tcp-lab-jni" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ratatui = "0.29.0"
crossterm = "0.29.0"
jni = { version = "0.21.1", features = ["invocation"] }
toml = "0.8" # Add this
