[package]
name = "tcp-lab-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
tcp-lab-abstract = { path = "../tcp-lab-abstract" }
rand = "0.9.2"
tracing.workspace = true
anyhow.workspace = true
toml = "0.9.8"
serde.workspace = true
base64 = "0.22.1"
des = "0.8.1"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]
