[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "tcp-lab-sdk"
version = "0.1.0"
description = "TCP Lab Python SDK with RDT1 starter and checksum utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["tcp_lab", "tcp_lab_sdk"]
[tool.setuptools.package-dir]
"" = "."

[tool.uv]
package = true
