[package]
name = "tcp-lab-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tcp-lab-core = { path = "../../crates/tcp-lab-core" }
tcp-lab-cli = { path = "../../crates/tcp-lab-cli" }
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }

[[example]]
name = "rdt3_runner"
path = "examples/rdt3_runner.rs"
